--- a/package.json
+++ b/package.json
@@ -7,14 +7,8 @@
     "lint": "vue-cli-service lint ./"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-brands-svg-icons": "^5.8.2",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/router": "^1.3.2",
     "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
     "dotenv": "^6.2.0",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
@@ -22,14 +16,15 @@
     "popper.js": "^1.15.0",
     "sweetalert2": "^8.11.6",
     "vform": "^1.0.0",
-    "vue-i18n": "^8.11.2"
+    "vue-i18n": "^8.11.2",
+    "vue-tailwind": "^0.1.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-plugin-async-import": "^2.0.2",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0"
+    "tailwindcss": "^1.0.2",
+    "postcss-loader": "^3.0.0"
   }
 }
